--- a/src/main/resources/assets/homeostatic/lang/en_us.json
+++ b/src/main/resources/assets/homeostatic/lang/en_us.json
@@ -8,5 +8,8 @@
 	"effect.homeostatic.thirst": "Thirst",
   "tooltip.insulation": "Insulation",
   "tooltip.waterproof": "Waterproof",
-  "tooltip.radiation_protection": "Radiation Protection"
+  "tooltip.radiation_protection": "Radiation Protection",
+  "tooltip.water_container.empty": "Empty",
+  "item.homeostatic.leather_flask": "Leather Flask",
+  "item.homeostatic.purified_water_bucket": "Purified Water Bucket"
 }
