--- a/src/main/resources/assets/homeostatic/lang/en_us.json
+++ b/src/main/resources/assets/homeostatic/lang/en_us.json
@@ -11,5 +11,7 @@
   "tooltip.radiation_protection": "Radiation Protection",
   "tooltip.water_container.empty": "Empty",
   "item.homeostatic.leather_flask": "Leather Flask",
-  "item.homeostatic.purified_water_bucket": "Purified Water Bucket"
+  "item.homeostatic.purified_water_bucket": "Purified Water Bucket",
+  "item.homeostatic.water_filter": "Water Filter",
+  "fluid.homeostatic.purified_water": "Purified Water"
 }
