--- a/src/main/resources/assets/homeostatic/lang/zh_cn.json
+++ b/src/main/resources/assets/homeostatic/lang/zh_cn.json
@@ -2,7 +2,7 @@
   "death.attack.hasDehydration": "%1$s 被烤干了",
   "death.attack.hasDehydration.player": "%1$s 在与 %2$s 战斗时被烤干了",
   "death.attack.hasHyperthermia": "中暑夺走了可怜的 %1$s 的生命",
-  "death.attack.hasHyperthermia.player": "在与 %2$s 战斗时，可怜的 %1$s 的生命被中暑夺走了",
+  "death.attack.hasHyperthermia.player": "在与 %2$s 战斗时，可怜的 %1$s 被中暑夺走了生命",
   "death.attack.isScalding": "%1$s 死于烫伤",
   "death.attack.isScalding.player": "%1$s 在与 %2$s 战斗时死于烫伤",
   "effect.homeostatic.thirst": "脱水",
@@ -11,7 +11,7 @@
   "homeostatic.items": "稳态",
   "info.homeostatic.book.education.body_temp.intro": "更多信息即将到来 ...",
   "info.homeostatic.book.education.body_temp.name": "教程：体温",
-  "info.homeostatic.book.education.desc": "本节专门针对那些试图公开论证，在又湿又冷并且只穿着T恤和裤子时通过跑来跑去可以产生足够的身体热量,的人（即使你有几分超人的能力）。 这太愚蠢了。$(br)$(br)如果需要，请参阅以下页面以了解其实际工作原理。提示：无论你跳来跳去或跑多少，如果身体又湿又冷，都会被冻死。此外，非常热的东西会烫伤、烧伤你或者把你煮熟……",
+  "info.homeostatic.book.education.desc": "本节专门针对那些试图公开论证“在又湿又冷并且只穿着T恤和裤子时通过跑来跑去可以产生足够的身体热量”的人（即使你有几分超人的能力）。 这太愚蠢了。$(br)$(br)如果需要，请参阅以下页面以了解其实际工作原理。提示：无论你跳来跳去或跑多少，如果身体又湿又冷，都会被冻死。此外，非常热的东西会烫伤、烧伤你或者把你煮熟……",
   "info.homeostatic.book.education.environment.intro": "更多信息即将到来 ...",
   "info.homeostatic.book.education.environment.name": "教程：环境",
   "info.homeostatic.book.education.hydration.intro": "更多信息即将到来 ...",
@@ -24,7 +24,7 @@
   "info.homeostatic.book.gameplay.body_temp.hypothermia.title": "冻伤/失温",
   "info.homeostatic.book.gameplay.body_temp.insulation.text": "任何盔甲都可以添加保暖功能。有保暖功能的盔甲部件越多，玩家的保暖效果就越好。有关合成表，请参阅 JEI/REI。",
   "info.homeostatic.book.gameplay.body_temp.insulation.title": "保暖",
-  "info.homeostatic.book.gameplay.body_temp.intro": "上面的箭头指向体温在HUD中的位置。可以华氏度或摄氏度显示。",
+  "info.homeostatic.book.gameplay.body_temp.intro": "上面的箭头指向体温在HUD中的位置。可以用华氏度或摄氏度显示。",
   "info.homeostatic.book.gameplay.body_temp.name": "体温",
   "info.homeostatic.book.gameplay.body_temp.radiation_protection.text": "任何盔甲都可以添加热辐射防护功能，添加到多个盔甲部件以实现最大程度的防护。$(br)而“抗火”效果则能充分保护玩家免受热辐射源的伤害。",
   "info.homeostatic.book.gameplay.body_temp.radiation_protection.title": "热辐射防护",
@@ -44,10 +44,10 @@
   "info.homeostatic.book.gameplay.body_temp.wetness.title": "湿度",
   "info.homeostatic.book.gameplay.desc": "游戏玩法通过多种机制得到增强。$(li)环境温度$(li)体温$(li2)湿度$(li2)中暑/烫伤$(li2)失温/冻伤$(li2)简单地说就是身体对环境温度的反应。$(li2)通过增强你的盔甲来保护自己，即使只穿普通盔甲也有帮助。$(li)口渴值$(li2)你现在又渴又饿。保持水分！",
   "info.homeostatic.book.gameplay.environment.details": "有几个因素可用于计算局部环境温度：$(br)$(li)当前温度和来自周围生物群落的影响。$(li)日照。$(li)热辐射源：例如岩浆、火把、点燃的熔炉等。$(li)海拔：山顶凉爽，地下温度更稳定。",
-  "info.homeostatic.book.gameplay.environment.intro": "上面的箭头指向HUD中局部环境温度的位置。可以以华氏度或摄氏度显示。",
+  "info.homeostatic.book.gameplay.environment.intro": "上面的箭头指向HUD中局部环境温度的位置。可以用华氏度或摄氏度显示。",
   "info.homeostatic.book.gameplay.environment.name": "环境温度",
   "info.homeostatic.book.gameplay.environment.title": "环境 °F/C HUD",
-  "info.homeostatic.book.gameplay.hydration.details": "补水有几种方法：$(br)$(li)徒手喝水。$(li2)蹲下并右键任何水源，你可以直接喝水。这可能会导致一个负面的状态效果。$(li)准备一个水袋。合成表和详细信息在以下页面上。$(li)吃有水分的食物或饮料。如果手持任何含水物品，一个小小的预览就会在水分条上闪烁(类似苹果皮模组)。",
+  "info.homeostatic.book.gameplay.hydration.details": "补水有几种方法：$(br)$(li)徒手喝水。$(li2)蹲下并右键任何水源，你可以直接喝水。这可能会产生一个负面的状态效果。$(li)准备一个水袋。合成表和详细信息在以下页面上。$(li)吃有水分的食物或饮料。如果手持任何含水物品，一个小的预览就会在水分条上闪烁(类似苹果皮模组)。",
   "info.homeostatic.book.gameplay.hydration.intro": "上面的箭头指向水分条。这类似于饥饿值，较亮的高光表示饱和度。",
   "info.homeostatic.book.gameplay.hydration.leather_flask.smelting.text": "要净化水袋中的脏水，有以下几种方法：$(li)在熔炉中烧（如上所示）$(li)在营火上烤 $(li)用烟熏炉熏制$(li)使用滤水纸(合成表在下一页）",
   "info.homeostatic.book.gameplay.hydration.leather_flask.smelting.title": "皮革水袋净化",
@@ -57,7 +57,7 @@
   "info.homeostatic.book.gameplay.hydration.leather_flask_water_filter.title": "皮革水袋净化",
   "info.homeostatic.book.gameplay.hydration.name": "补水/口渴",
   "info.homeostatic.book.gameplay.hydration.title": "口渴值 HUD",
-  "info.homeostatic.book.gameplay.hydration.water_filter.text": "滤水纸也可用在合成中去过滤皮革水袋中的脏水。",
+  "info.homeostatic.book.gameplay.hydration.water_filter.text": "滤水纸也可在合成中使用以过滤皮革水袋中的脏水。",
   "info.homeostatic.book.gameplay.hydration.water_filter.title": "滤水纸",
   "info.homeostatic.book.gameplay.name": "玩法",
   "info.homeostatic.book.intro": "不违反逻辑的温度和水分变化...$(br)$(li) $(l:homeostatic:education/environment)环境$()温度受 $(l:https://simple.wikipedia.org/wiki/Thermal_radiation)热辐射$()影响, 比如太阳、岩浆、营火等等。$(li)必须保持体温，否则你会得到 $(l:https://simple.wikipedia.org/wiki/Hyperthermia)中暑$() 或 $(l:https://simple.wikipedia.org/wiki/Hypothermia)失温$() $(li)补水是生存所必需的。",
