--- a/src/main/resources/assets/homeostatic/lang/zh_cn.json
+++ b/src/main/resources/assets/homeostatic/lang/zh_cn.json
@@ -11,7 +11,7 @@
   "homeostatic.items": "稳态",
   "info.homeostatic.book.education.body_temp.intro": "更多信息即将到来 ...",
   "info.homeostatic.book.education.body_temp.name": "教程：体温",
-  "info.homeostatic.book.education.desc": "本节专门针对那些试图公开论证“在又湿又冷并且只穿着T恤和裤子时通过跑来跑去可以产生足够的身体热量”的人（即使你有几分超人的能力）。 这太愚蠢了。$(br)$(br)如果需要，请参阅以下页面以了解其实际工作原理。提示：无论你跳来跳去或跑多少，如果身体又湿又冷，都会被冻死。此外，非常热的东西会烫伤、烧伤你或者把你煮熟……",
+  "info.homeostatic.book.education.desc": "本节专门针对那些试图公开论证“在又湿又冷并且只穿着T恤和裤子时通过跑来跑去可以产生足够的身体热量”的人（即使你有几分超人的能力）。 这太愚蠢了。$(br)$(br)如果需要，请参阅以下页面以了解其实际工作原理。提示：无论你是跳来跳去还是跑了多少，如果身体又湿又冷，都会让你被冻死。此外，非常热的东西会烫伤、烧伤你或者把你煮熟……",
   "info.homeostatic.book.education.environment.intro": "更多信息即将到来 ...",
   "info.homeostatic.book.education.environment.name": "教程：环境",
   "info.homeostatic.book.education.hydration.intro": "更多信息即将到来 ...",
@@ -60,7 +60,7 @@
   "info.homeostatic.book.gameplay.hydration.water_filter.text": "滤水纸也可在合成中使用以过滤皮革水袋中的脏水。",
   "info.homeostatic.book.gameplay.hydration.water_filter.title": "滤水纸",
   "info.homeostatic.book.gameplay.name": "玩法",
-  "info.homeostatic.book.intro": "不违反逻辑的温度和水分变化...$(br)$(li) $(l:homeostatic:education/environment)环境$()温度受 $(l:https://simple.wikipedia.org/wiki/Thermal_radiation)热辐射$()影响, 比如太阳、岩浆、营火等等。$(li)必须保持体温，否则你会得到 $(l:https://simple.wikipedia.org/wiki/Hyperthermia)中暑$() 或 $(l:https://simple.wikipedia.org/wiki/Hypothermia)失温$() $(li)补水是生存所必需的。",
+  "info.homeostatic.book.intro": "不违反逻辑的温度和水分变化...$(br)$(li) $(l:homeostatic:education/environment)环境$()温度受 $(l:https://simple.wikipedia.org/wiki/Thermal_radiation)热辐射$()影响, 比如太阳、岩浆、营火等等。$(li)必须保持体温，否则你会 $(l:https://simple.wikipedia.org/wiki/Hyperthermia)中暑$() 或 $(l:https://simple.wikipedia.org/wiki/Hypothermia)失温$() $(li)补水是生存所必需的。",
   "info.homeostatic.book.subtitle": "关于温度和水",
   "item.homeostatic.book": "稳态：教程书",
   "item.homeostatic.leather_flask": "皮革水袋",
