--- a/src/main/resources/assets/homeostatic/lang/zh_cn.json
+++ b/src/main/resources/assets/homeostatic/lang/zh_cn.json
@@ -17,7 +17,7 @@
   "info.homeostatic.book.education.hydration.intro": "更多信息即将到来 ...",
   "info.homeostatic.book.education.hydration.name": "教程：口渴值",
   "info.homeostatic.book.education.name": "教程",
-  "info.homeostatic.book.gameplay.body_temp.details": "有几个因素用于计算体温:$(br)$(li)环境温度.$(li)盔甲 - 详情见后页.$(li2)$(l:homeostatic:gameplay/body_temp#insulation)保暖$()$(li2)$(l:homeostatic:gameplay/body_temp#radiation_protection)热辐射防护$()$(li2)$(l:homeostatic:gameplay/body_temp#waterproofing)防水$()$(li)$(l:homeostatic:gameplay/body_temp#wetness)湿度$()$(li2)玩家的干湿程度决定了他们降温或升温的速度.$(li)$(l:homeostatic:gameplay/body_temp#scalding)烫伤$() / $(l:homeostatic:gameplay/body_temp#hyperthermia)中暑$()$(li)$(l:homeostatic:gameplay/body_temp#hypothermia)冻伤/失温$()",
+  "info.homeostatic.book.gameplay.body_temp.details": "有几个因素用于计算体温:$(br)$(li)环境温度。$(li)盔甲 - 详情见后页。$(li2)$(l:homeostatic:gameplay/body_temp#insulation)保暖$()$(li2)$(l:homeostatic:gameplay/body_temp#radiation_protection)热辐射防护$()$(li2)$(l:homeostatic:gameplay/body_temp#waterproofing)防水$()$(li)$(l:homeostatic:gameplay/body_temp#wetness)湿度$()$(li2)玩家的干湿程度决定了他们降温或升温的速度。$(li)$(l:homeostatic:gameplay/body_temp#scalding)烫伤$() / $(l:homeostatic:gameplay/body_temp#hyperthermia)中暑$()$(li)$(l:homeostatic:gameplay/body_temp#hypothermia)冻伤/失温$()",
   "info.homeostatic.book.gameplay.body_temp.hyperthermia.intro": "当身体温度高于 106°F 或 41°C 时，可能会发生中暑。",
   "info.homeostatic.book.gameplay.body_temp.hyperthermia.title": "中暑",
   "info.homeostatic.book.gameplay.body_temp.hypothermia.intro": "当身体温度低于 95°F 或 35°C 时，可能会发生失温。",
@@ -39,7 +39,7 @@
   "info.homeostatic.book.gameplay.body_temp.title": "身体 °F/C HUD",
   "info.homeostatic.book.gameplay.body_temp.waterproof.text": "防水可以添加到任何盔甲上。添加到多个盔甲部件以增加防水程度。",
   "info.homeostatic.book.gameplay.body_temp.waterproof.title": "防水",
-  "info.homeostatic.book.gameplay.body_temp.wetness.details": "玩家的干湿程度决定了 $(l:homeostatic:gameplay/body_temp)体温$() 降低的速度. 这可能是好事也可能是坏事，视情况而定:$(li)炎热时，潮湿或在水中可以帮助玩家快速降温。$(li)寒冷时，潮湿会增加玩家冻死的风险。$(li2)寻找庇护所或为盔甲添加 $(l:homeostatic:gameplay/body_temp#waterproofing)防水$() 对于保持干燥至关重要。",
+  "info.homeostatic.book.gameplay.body_temp.wetness.details": "玩家的干湿程度决定了 $(l:homeostatic:gameplay/body_temp)体温$() 降低的速度。这可能是好事也可能是坏事，视情况而定:$(li)炎热时，潮湿或在水中可以帮助玩家快速降温。$(li)寒冷时，潮湿会增加玩家冻死的风险。$(li2)寻找庇护所或为盔甲添加 $(l:homeostatic:gameplay/body_temp#waterproofing)防水$() 对于保持干燥至关重要。",
   "info.homeostatic.book.gameplay.body_temp.wetness.intro": "弄湿时，水滴会覆盖在屏幕边缘，如上图所示。",
   "info.homeostatic.book.gameplay.body_temp.wetness.title": "湿度",
   "info.homeostatic.book.gameplay.desc": "游戏玩法通过多种机制得到增强。$(li)环境温度$(li)体温$(li2)湿度$(li2)中暑/烫伤$(li2)失温/冻伤$(li2)简单地说就是身体对环境温度的反应。$(li2)通过增强你的盔甲来保护自己，即使只穿普通盔甲也有帮助。$(li)口渴值$(li2)你现在又渴又饿。保持水分！",
