Add missing translation lines for zh_cn for translators to update.

--- a/Common/src/main/resources/assets/homeostatic/lang/zh_cn.json
+++ b/Common/src/main/resources/assets/homeostatic/lang/zh_cn.json
@@ -57,6 +57,10 @@
   "info.homeostatic.book.gameplay.hydration.leather_flask_water_filter.title": "皮革水袋净化",
   "info.homeostatic.book.gameplay.hydration.name": "补水/口渴",
   "info.homeostatic.book.gameplay.hydration.title": "口渴值 HUD",
+  "info.homeostatic.book.gameplay.hydration.water_bottle.campfire.text": "To purify the dirty water in a water bottle, there are several methods: $(li)Smelt in a Furnace$(li)Cook over a Campfire (shown above)$(li)Smoke in a Smoker",
+  "info.homeostatic.book.gameplay.hydration.water_bottle.campfire.title": "Water Bottle Purification",
+  "info.homeostatic.book.gameplay.hydration.water_bottle.text": "Using a Water Bottle can be helpful in the early game. To fill, simply interact with any water source block and it will be \"filled\". However, this is dirty water. See following page to purify.",
+  "info.homeostatic.book.gameplay.hydration.water_bottle.title": "Water Bottle",
   "info.homeostatic.book.gameplay.hydration.water_filter.text": "也可以合成滤水纸来过滤皮革水袋中的脏水。",
   "info.homeostatic.book.gameplay.hydration.water_filter.title": "滤水纸",
   "info.homeostatic.book.gameplay.name": "玩法",
@@ -64,6 +68,7 @@
   "info.homeostatic.book.subtitle": "关于温度和水",
   "item.homeostatic.book": "稳态：教程书",
   "item.homeostatic.leather_flask": "皮革水袋",
+  "item.homeostatic.purified_water_bottle": "Purified Water Bottle",
   "item.homeostatic.purified_water_bucket": "纯净水桶",
   "item.homeostatic.thermometer": "温度计",
   "item.homeostatic.water_filter": "滤水纸",
