--- a/Common/src/main/resources/assets/homeostatic/lang/zh_cn.json
+++ b/Common/src/main/resources/assets/homeostatic/lang/zh_cn.json
@@ -3,7 +3,7 @@
   "death.attack.hasDehydration": "%1$s 脱水而亡",
   "death.attack.hasDehydration.player": "%1$s 在与 %2$s 战斗时脱水而亡",
   "death.attack.hasHyperthermia": "可怜的 %1$s 因中暑丧命",
-  "death.attack.hasHyperthermia.player": "在与 %2$s 战斗时，可怜的 %1$s 因中暑丧命",
+  "death.attack.hasHyperthermia.player": "可怜的 %1$s 在与 %2$s 战斗时因中暑丧命",
   "death.attack.isScalding": "%1$s 死于烫伤",
   "death.attack.isScalding.player": "%1$s 在与 %2$s 战斗时死于烫伤",
   "effect.homeostatic.thirst": "脱水",
@@ -51,7 +51,7 @@
   "info.homeostatic.book.gameplay.hydration.intro": "上面的箭头指向水分条。这类似于饥饿值，较亮的高光表示饱和度。",
   "info.homeostatic.book.gameplay.hydration.leather_flask.smelting.text": "要净化水袋中的脏水，有以下几种方法：$(li)在熔炉中烧（如上所示）$(li)在营火上烤 $(li)用烟熏炉熏制$(li)使用滤水纸(合成表在下一页）",
   "info.homeostatic.book.gameplay.hydration.leather_flask.smelting.title": "皮革水袋净化",
-  "info.homeostatic.book.gameplay.hydration.leather_flask.text": "皮革水袋在水资源有限的环境中至关重要。如果你要填充它，只需拿着它右击任何水源方块，它就会被“填充”。然而这样获得的是脏水脏水。请参阅下页方法净化。",
+  "info.homeostatic.book.gameplay.hydration.leather_flask.text": "皮革水袋在水资源有限的环境中至关重要。如果你要填充它，只需拿着它右击任何水源方块，它就会被“填充”。然而这样获得的是脏水。请参阅下页方法净化。",
   "info.homeostatic.book.gameplay.hydration.leather_flask.title": "皮革水袋",
   "info.homeostatic.book.gameplay.hydration.leather_flask_water_filter.text": "只需将装满水的水袋与滤水纸合成，即可制作一瓶纯净水。",
   "info.homeostatic.book.gameplay.hydration.leather_flask_water_filter.title": "皮革水袋净化",
@@ -59,7 +59,7 @@
   "info.homeostatic.book.gameplay.hydration.title": "口渴值 HUD",
   "info.homeostatic.book.gameplay.hydration.water_bottle.campfire.text": "以下几种方法可以净化水瓶中的脏水：$(li)在熔炉中加热$(li)在篝火上烤（如上所示）$(li)在烟熏炉中加热",
   "info.homeostatic.book.gameplay.hydration.water_bottle.campfire.title": "水瓶净化",
-  "info.homeostatic.book.gameplay.hydration.water_bottle.text": "在游戏的早期使用水瓶是很有帮助的. 只需要用它右击任何水源方块就可以完成 \"填充\"。不过这样获得的是脏水。请参阅下页方法净化。",
+  "info.homeostatic.book.gameplay.hydration.water_bottle.text": "在游戏的早期使用水瓶是很有帮助的. 只需要用它右击任何水源方块就可以完成 \"填充\"。然而这样获得的是脏水。请参阅下页方法净化。",
   "info.homeostatic.book.gameplay.hydration.water_bottle.title": "水瓶",
   "info.homeostatic.book.gameplay.hydration.water_filter.text": "也可以合成滤水纸来过滤皮革水袋中的脏水。",
   "info.homeostatic.book.gameplay.hydration.water_filter.title": "滤水纸",
